commit especial integracao focus

--- a/temas/temas.html
+++ b/temas/temas.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jogo da Forca!</title>
-    <link rel="stylesheet" href="../css/temas.css">
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/temas.css" />
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
+  </head>
+  <body>
     <header>
-        <h1>Jogo da Forca!</h1>
-        <p>Criado por: Breno Pinna</p>
+      <h1>Jogo da Forca!</h1>
+      <p>Criado por: Breno Pinna</p>
     </header>
     <main>
-        <h2>Selecione um Tema:</h2>
-        <div class="options-container">
-            
-        </div><!--options-container-->
-        <a href="../game/game.html"><button id="form-submit">Enviar</button></a>
+      <h2>Selecione um Tema:</h2>
+      <div class="options-container"></div>
+      <!--options-container-->
+      <a href="../game/game.html"><button id="form-submit">Jogar</button></a>
     </main>
-<script src="../js/temas.js"></script>
-</body>
+    <script src="../js/temas.js"></script>
+  </body>
 </html>
