mudancinha no header rs

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jogo da Forca!</title>
-    <link rel="stylesheet" href="./css/home.css">
-    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/home.css" />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+  </head>
+  <body>
     <header>
-        <h1>Jogo da Forca!</h1>
-        <p>Criado por: Breno Pinna</p>
+      <h1>Jogo da Forca!</h1>
+      <!-- <p>Criado por: Breno Pinna</p> -->
+      <p>Se disser que o jogo tá feio, toma metragem!</p>
     </header>
     <a href="./temas/temas.html"><button>Iniciar Jogo</button></a>
-</body>
+  </body>
 </html>
