--- a/temas/temas.html
+++ b/temas/temas.html
@@ -11,7 +11,8 @@
   <body>
     <header>
       <h1>Jogo da Forca!</h1>
-      <p>Criado por: Breno Pinna</p>
+      <!-- <p>Criado por: Breno Pinna</p> -->
+      <p>Se disser que o jogo tá feio, toma metragem!</p>
     </header>
     <main>
       <h2>Selecione um Tema:</h2>
